# OpenFOAM-Windows

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  foamwindows.sublime-project
Foam-Windows/Foam-Windows.xcodeproj/: project.pbxproj
Foam-Windows/Foam-Windows.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Foam-Windows/Foam-Windows.xcodeproj/project.xcworkspace/xcuserdata/saifmulla.xcuserdatad/: UserInterfaceState.xcuserstate
Foam-Windows/Foam-Windows.xcodeproj/xcuserdata/saifmulla.xcuserdatad/xcschemes/: Foam-Windows.xcscheme  xcschememanagement.plist
applications/: CMakeLists.txt
applications/test/unittests/: All_Tests.cpp  All_Tests.hpp  CMakeLists.txt  TestChar.cpp  TestContiguous.cpp  TestContiguous.hpp  TestOne.cpp  TestOne.hpp  TestScalar.cpp  TestScalar.hpp  TestSwap.cpp  TestWindowsExport.cpp  TestZero.cpp  TestZero.hpp  TestpTraits.cpp  TestpTraits.hpp
cmake/: Darwin64.cmake  Darwin64Clang.cmake  Darwin64GNU.cmake  Linux64.cmake  Linux64Clang.cmake  Linux64GNU.cmake  Windows64.cmake  Windows64MSVC.cmake
libraries/: CMakeLists.txt
libraries/CMake/GTest/: CMakeLists.txt
libraries/googletest/testing-src/gtest/: gtest.h
libraries/gtest/: Makefile  gtest.sublime-project
src/: CMakeLists.txt
src/OpenFOAM/: CMakeLists.txt
src/OpenFOAM/Make/: options
src/OpenFOAM/global/: foamDoc.H  foamVersion.H  global.Cver  new.C
src/OpenFOAM/global/clock/: clock.C  clock.H
src/OpenFOAM/global/debug/: debug.H
src/OpenFOAM/include/: windowsExport.H
src/OpenFOAM/primitives/Scalar/: Scalar.C  doubleFloat.H
src/OpenFOAM/primitives/Scalar/doubleScalar/: doubleScalar.C  doubleScalar.H
src/OpenFOAM/primitives/Scalar/floatScalar/: floatScalar.C  floatScalar.H
src/OpenFOAM/primitives/Scalar/scalar/: scalar.C  scalar.H
src/OpenFOAM/primitives/Swap/: Swap.H
src/OpenFOAM/primitives/bool/: bool.C  bool.H
src/OpenFOAM/primitives/bools/Switch/: Switch.C  Switch.H
src/OpenFOAM/primitives/chars/char/: char.H
src/OpenFOAM/primitives/chars/wchar/: wchar.H
src/OpenFOAM/primitives/contiguous/: contiguous.H
src/OpenFOAM/primitives/direction/: direction.H
src/OpenFOAM/primitives/hashes/Hash/: Hash.H
src/OpenFOAM/primitives/hashes/SHA1/: SHA1.C  SHA1.H  SHA1Digest.C  SHA1Digest.H  SHA1I.H
src/OpenFOAM/primitives/oldScalar/: Scalar.H
src/OpenFOAM/primitives/one/: one.H
src/OpenFOAM/primitives/pTraits/: pTraits.H
src/OpenFOAM/primitives/strings/string/: string.C  string.H
src/OpenFOAM/primitives/strings/word/: word.C  word.H  wordI.H
src/OpenFOAM/primitives/zero/: zero.H  zeroI.H
src/OpenFOAM/unittests/: All_Tests.hpp  CMakeLists.txt  TestChar.hpp  TestDoubleFloat.hpp  TestHashes.hpp  TestSwap.hpp  TestWindowsExport.hpp
